# dim-g1-dash

./: .gitignore  README.md  README.md.tmp.18737.34ec8802d3c9
dim/apps/g1_dash/: app.yaml  main.js
dim/apps/g1_dash/frontend/: index.html
dim/apps/g1_dash/g1_helper_cpp/: .gitignore  CMakeLists.txt  README.md  flake.nix
dim/apps/g1_dash/g1_helper_cpp/src/: main.cpp  mid360.cpp  mid360.hpp  protocol.cpp  protocol.hpp  realsense.cpp  realsense.hpp  unitree_bridge.cpp  unitree_bridge.hpp  webcam.cpp  webcam.hpp
